fix z-index

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -36,7 +36,7 @@
   position: fixed;
   left: 5%;
   top: 5%;
-  z-index: 99; }
+  z-index: 99 !important; }
 
 .my-pink {
   background-color: #E9627D !important; }
