--- a/app/scss/_projects.scss
+++ b/app/scss/_projects.scss
@@ -17,7 +17,7 @@
   position: fixed;
   left: 5%;
   top: 5%;
-  z-index: 99;
+  z-index: 99 !important;
 }
 
 .my-pink {
